# CN_CHomeworks1

./: README.md
Chatroom/: Client.out  Server.out  makefile  readme.md
Chatroom/source/: Client.cpp  Server.cpp
FTP/: Client.cpp  Commads.h  Extra.cpp  Extra.h  Makefile  Server.cpp  client.out  help.txt  log.txt  makefile  readme.md  server.out  utility.c  utility.cpp  utility.h  utility.hpp
FTP/root/: a.txt  config.json
FTP/server/: Application.cpp  Application.hpp  Commands.h  Configuration.hpp  Messages.h  main.cpp
FTP/server/commands/:  UserCommand.hpp  Command.hpp  Commands.hpp  HelpCommand.hpp  PassCommand.hpp  PwdCommand.hpp  control.cpp  control.hpp  file_system.cpp  logging.cpp  logging.h  user.cpp
FTP/server/context/: AppContext.cpp  AppContext.hpp  Path.cpp  Path.hpp  User.hpp
RFTP/: Config.cpp  README.md  c.txt  downloadCMD-0.txt  downloadCMD-1.txt  log.txt  makefile  uploadCMD.txt
RFTP/Files/: config.json
RFTP/source/: Client.cpp  Command.cpp  Config.cpp  Server.cpp  User.cpp
WebServer/: .gitignore  CMakeLists.txt  Readme.md  client.c  client.out  fileData.h  makefile  server  server.c  server.out
WebServer/FileData/: CMakeLists.txt  file.c  file.h
